[package]
name = "rust-studio"
version = "0.1.1"
authors = ["Henrique Reimão <seuemail@example.com>"]
edition = "2021"
description = "Rust database client with a user-friendly web interface. Connects to any database via environment variables and allows easy data management through a modern web interface."
repository = "https://github.com/ReimaoHenrique/rust-studio"
homepage = "https://henriquereimao.dev/rust-studio"
documentation = "https://docs.rs/rust-studio"
license = "Apache-2.0"
keywords = ["rust", "database", "web", "gui", "interface"]


[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "cargo-rust-studio"  
path = "src/main.rs"
